[tool.poetry]
name = "dlink-firmware-scraper"
version = "1.0"
description = "D-Link Firmware Scraper"
authors = ["Andrew Gigena <mail@andrewgigena.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
